<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.14">
  <POU Name="PRG_SERIAL_COM" Id="{679ad23f-465a-4197-bd5e-90771d62ebf6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SERIAL_COM
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Instanitate Serial port com function *) 
fbSerialLineControl(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(stComIn),
	pComOut:=ADR(stComOut),
	SizeComIn:= SIZEOF(stComIn),
	TxBuffer:= SerialRXBuffer,
	RxBuffer:= SerialTXBuffer,
	Error=> ,
	ErrorID=> );]]></ST>
    </Implementation>
    <LineIds Name="PRG_SERIAL_COM">
      <LineId Id="6" Count="8" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>